--- a/recipes/khichdi-rice.html
+++ b/recipes/khichdi-rice.html
@@ -24,6 +24,7 @@
         </ul>
     </div>
     <div>
+        <h1>Follow these steps</h1>
         <ol>
         <li>In a kadai add the oil and then add mustard seeds, and let them sizzle.</li>
         <li>Once sizzled add cumin seeds, followed by the Asafoetida, curry leaves curry leaves.</li>
@@ -34,6 +35,7 @@
         <li>After 10 minutes check if the rice is cooked and the water has evaporated.</li>
         <li>Garnish with some ghee, fresh cilantro and grated fresh coconut.  </li>
         </ol>
+        <p>Tell me how was the recipe :)</p>
     </div>
 </body>
 </html>
